--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.6",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "element-plus": "^1.3.0-beta.9",
+    "normalize.css": "^8.0.1",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
@@ -35,7 +41,9 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.5.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "unplugin-auto-import": "^0.5.11",
+    "unplugin-vue-components": "^0.17.13"
   },
   "config": {
     "commitizen": {
