feat: 用户菜单和动态路由映射完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       // ts模块路径映射，和webpack的resolve.alias类似，不过针对的是ts的
       "@/*": ["src/*"],
       "@/components/*": ["src/components/*"],
-      "@/utils/*": ["src/utils/*"]
+      "@/utils/*": ["src/utils/*"],
+      "@/views/*": ["src/views/*"]
     },
     // 可以指定在项目中可以使用哪些库的类型
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
